fixed alignment with button

--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -32,9 +32,16 @@
   margin-top: 100px;
 }
 
-.container {
+.container,
+.urlContainer {
   margin: 20px;
   display: flex;
   justify-content: center;
   flex-grow: 1;
+}
+
+.button {
+  height: 40%;
+  align-self: flex-end;
+  margin: 10px;
 }
